started variables and dom structure. Added in Bourbon.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
 		<script src="js/js.js"></script>
 	</head>
 	<body>
-		
+		<header>
+			<nav></nav>
+		</header>
+
+		<aside id="marquee">
+
+		</aside>
+
+		<section>
+			
+		</section>
 	</body>
 </html>
