started adding in JS and page specific styles

--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
 		<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 		<script src="js/js.js"></script>
 	</head>
-	<body>
+	<body class="home">
 		<header>
+			<aside id="name">
+				<a href="/" class="larger">Aaron Linkous</a><span class="smaller">, title</span>
+			</aside>
+
 			<nav></nav>
 		</header>
 
@@ -16,7 +20,7 @@
 		</aside>
 
 		<section>
-			
+			asdasd
 		</section>
 	</body>
 </html>
