added temp marquee image and appropriate css attributes

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 		</header>
 
 		<aside id="marquee">
-
+			<button>Text</button>
+			<button class="reversed">Text</button>
 		</aside>
 
 		<section>
