--- a/index.html
+++ b/index.html
@@ -9,19 +9,20 @@
 	<body class="home">
 		<header>
 			<aside id="name">
-				<a href="/" class="larger">Aaron Linkous</a><span class="smaller">, title</span>
+				<a href="/" class="larger">Aaron Linkous</a><span class="smaller">, <span class="title">Sr. Developer</span></span>
 			</aside>
 
 			<nav></nav>
 		</header>
 
 		<aside id="marquee">
-			<button>Text</button>
-			<button class="reversed">Text</button>
+				<h1 class="title">Sr. Developer</h1>
+				<button>Github</button>
+				<button>Resum&eacute;</button>
 		</aside>
 
 		<section>
-			asdasd
+			
 		</section>
 	</body>
 </html>
