--- a/index.html
+++ b/index.html
@@ -12,17 +12,19 @@
 				<a href="/" class="larger">Aaron Linkous</a><span class="smaller">, <span class="title">Sr. Developer</span></span>
 			</aside>
 
-			<nav></nav>
+			<nav>
+				
+			</nav>
 		</header>
 
 		<aside id="marquee">
 				<h1 class="title">Sr. Developer</h1>
-				<button>Github</button>
-				<button>Resum&eacute;</button>
+				<a href="/" class="fake_button">Github</a>
+				<a href="/" class="fake_button">Resum&eacute;</a>
 		</aside>
 
 		<section>
-			
+				<a href="/" class="fake_button">Github</a>			
 		</section>
 	</body>
 </html>
