center position marquee items. fixed line-height on .fake_button

--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
 			</nav>
 		</header>
 
-		<aside id="marquee">
+		<section id="marquee">
+			<article class="centered">
 				<h1 class="title">Sr. Developer</h1>
 				<a href="/" class="fake_button">Github</a>
 				<a href="/" class="fake_button">Resum&eacute;</a>
-		</aside>
+			</article>
+		</section>
 
 		<section>
 				<a href="/" class="fake_button">Github</a>
