--- a/index.html
+++ b/index.html
@@ -25,8 +25,11 @@
 			</article>
 		</section>
 
-		<section>
-				<a href="/" class="fake_button">Github</a>
+		<section id="content">
+
 		</section>
+
+		<script type="text/javascript" src="//use.typekit.net/los8sls.js"></script>
+		<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 	</body>
 </html>
