--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			</nav>
 		</header>
 
-		<section id="marquee">
+		<section id="marquee" class="fixed">
 			<article class="centered">
 				<h1 class="title">Sr. Developer</h1>
 				<a href="/" class="fake_button">Github</a>
@@ -26,7 +26,7 @@
 		</section>
 
 		<section id="content">
-
+			
 		</section>
 
 		<script type="text/javascript" src="//use.typekit.net/los8sls.js"></script>
