--- a/index.html
+++ b/index.html
@@ -7,13 +7,17 @@
 		<script src="js/js.js"></script>
 	</head>
 	<body class="home">
-		<header>
+		<header class="active">
 			<aside id="name">
 				<a href="/" class="larger">Aaron Linkous</a><span class="smaller">, <span class="title">Sr. Developer</span></span>
 			</aside>
 
 			<nav>
-				
+				<ul class="larger">
+					<li><a href="#">Work</a></li>
+					<li><a href="#">About</a></li>
+					<li><a href="#">Contact</a></li>
+					<li class="clear"></li>
 			</nav>
 		</header>
 
