added grid basics and footer and logic to control if it's sticky or not (had to us js because of postion absolute)

--- a/index.html
+++ b/index.html
@@ -18,20 +18,31 @@
 					<li><a href="#">About</a></li>
 					<li><a href="#">Contact</a></li>
 					<li class="clear"></li>
+				</ul>
 			</nav>
 		</header>
 
 		<section id="marquee" class="fixed">
 			<article class="centered">
 				<h1 class="title">Sr. Developer</h1>
-				<a href="/" class="fake_button">Github</a>
-				<a href="/" class="fake_button">Resum&eacute;</a>
+				<a href="/" class="fake_button" title="Github">Github</a>
+				<a href="/" class="fake_button" title="Resum&eacute;">Resum&eacute;</a>
 			</article>
 		</section>
 
-		<section id="content">
-			
-		</section>
+		<div id="wrapper">
+			<section id="content">
+				
+			</section>
+
+			<footer>
+				<ul class="row full_width split">
+					<li><a href="https://github.com/aaronlinkous" target="_blank" title="Github"><span>Github</span></a></li>
+					<li><a href="http://dribbble.com/aaronlinkous" target="_blank" title="dribbble"><span>dribbble</span></a></li>
+					<li><a href="http://www.linkedin.com/in/aaronlinkous" target="_blank" title="LinkedIn"><span>LinkedIn</span></a></li>
+				</ul>
+			</footer>
+		</div>
 
 		<script type="text/javascript" src="//use.typekit.net/los8sls.js"></script>
 		<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
