--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 
 			<footer>
 				<ul class="row full_width split">
-					<li><a href="https://github.com/aaronlinkous" target="_blank" title="Github"><span>Github</span></a></li>
-					<li><a href="http://dribbble.com/aaronlinkous" target="_blank" title="dribbble"><span>dribbble</span></a></li>
-					<li><a href="http://www.linkedin.com/in/aaronlinkous" target="_blank" title="LinkedIn"><span>LinkedIn</span></a></li>
+					<li id="git" class="touching"><a href="https://github.com/aaronlinkous" target="_blank" title="Github"><span>Github</span></a></li>
+					<li id="dribbble" class="touching"><a href="http://dribbble.com/aaronlinkous" target="_blank" title="dribbble"><span>dribbble</span></a></li>
+					<li id="linkedin" class="touching"><a href="http://www.linkedin.com/in/aaronlinkous" target="_blank" title="LinkedIn"><span>LinkedIn</span></a></li>
 				</ul>
 			</footer>
 		</div>
