started working on the work grid

--- a/index.html
+++ b/index.html
@@ -32,7 +32,14 @@
 
 		<div id="wrapper">
 			<section id="content">
-				
+				<ul id="work_grid" class="row full_width">
+					<li id="bahamar"><a href="#">Bahamar</a><img src="#" /></li>
+					<li id="bahamar"><a href="#">Bahamar</a><img src="#" /></li>
+					<li id="bahamar"><a href="#">Bahamar</a><img src="#" /></li>
+					<li id="bahamar"><a href="#">Bahamar</a><img src="#" /></li>
+					<li id="bahamar"><a href="#">Bahamar</a><img src="#" /></li>
+					<li id="bahamar"><a href="#">Bahamar</a><img src="#" /></li>
+				</ul>
 			</section>
 
 			<footer>
