media queries for work grid

--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="en">
 	<head>
 		<title>Aaron Linkous, Sr. Developer</title>
 		<link rel="stylesheet" type="text/css" href="css/css.css" media="screen" />
 		<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 		<script src="js/js.js"></script>
+
+		<meta name="viewport" content="initial-scale=1, maximum-scale=1">
 	</head>
 	<body class="home">
-		<header class="active">
+		<header>
 			<aside id="name">
 				<a href="/" class="larger">Aaron Linkous</a><span class="smaller">, <span class="title">Sr. Developer</span></span>
 			</aside>
