--- a/index.html
+++ b/index.html
@@ -37,12 +37,17 @@
 		<div id="wrapper">
 			<section id="content">
 				<ul id="work_grid" class="row full_width">
-					<li id="bahamar"><a href="#">Bahamar</a><img src="#" /></li>
-					<li id="bahamar"><a href="#">Bahamar</a><img src="#" /></li>
-					<li id="bahamar"><a href="#">Bahamar</a><img src="#" /></li>
-					<li id="bahamar"><a href="#">Bahamar</a><img src="#" /></li>
-					<li id="bahamar"><a href="#">Bahamar</a><img src="#" /></li>
-					<li id="bahamar"><a href="#">Bahamar</a><img src="#" /></li>
+					<li id="flowers"><a href="#"><span></span><div>1800 Flowers</div></a><img src="#" /></li>
+					<li id="fnm"><a href="#"><span></span><div>Fannie May</div></a><img src="#" /></li>
+					<li id="famous"><a href="#"><span></span><div>Famous Footwear</div></a><img src="#" /></li>
+					<li id="bahamar"><a href="#"><span></span><div>Bahamar</div></a><img src="#" /></li>
+					<li id="delmar"><a href="#"><span></span><div>The Grand Del Mar</div></a><img src="#" /></li>
+					<li id="belterra"><a href="#"><span></span><div>Belterra Casino</div></a><img src="#" /></li>
+					<li id="bilt"><a href="#"><span></span><div>BILT</div></a><img src="#" /></li>
+					<li id="decklab"><a href="#"><span></span><div>decklab</div></a><img src="#" /></li>
+					<li id="lauberge"><a href="#"><span></span><div>L'auberge Casino</div></a><img src="#" /></li>
+					<li id="florists"><a href="#"><span></span><div>Florists</div></a><img src="#" /></li>
+					<li id="lumiere"><a href="#"><span></span><div>Lumiere Casino</div></a><img src="#" /></li>
 				</ul>
 			</section>
 
