--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 			</nav>
 		</header>
 
+
 		<section id="marquee" class="fixed">
 			<article class="centered">
 				<h1 class="title">Sr. Developer</h1>
@@ -36,6 +37,7 @@
 			<section id="content">
 				<ul id="work_grid" class="row full_width">
 					<li id="flowers"><a href="#"><span></span><div>1800 Flowers</div></a><img src="#" /></li>
+					<li id="bellmobi"><a href="#"><span></span><div>Bellmobi</div></a><img src="#" /></li>
 					<li id="fnm"><a href="#"><span></span><div>Fannie May</div></a><img src="#" /></li>
 					<li id="famous"><a href="#"><span></span><div>Famous Footwear</div></a><img src="#" /></li>
 					<li id="bahamar"><a href="#"><span></span><div>Bahamar</div></a><img src="#" /></li>
