added if mobile check to get_size(). misc cleanup

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 				<ul id="work_grid" class="row full_width">
 					<li id="flowers"><a href="#"><span></span><div>1800 Flowers</div></a><img src="#" /></li>
 					<li id="bellmobi"><a href="#"><span></span><div>Bellmobi</div></a><img src="#" /></li>
+					<li id="giftify"><a href="#"><span></span><div>Giftify</div></a><img src="#" /></li>
 					<li id="fnm"><a href="#"><span></span><div>Fannie May</div></a><img src="#" /></li>
 					<li id="famous"><a href="#"><span></span><div>Famous Footwear</div></a><img src="#" /></li>
 					<li id="bahamar"><a href="#"><span></span><div>Bahamar</div></a><img src="#" /></li>
