--- a/flowers.html
+++ b/flowers.html
@@ -8,7 +8,7 @@
 
 		<meta name="viewport" content="initial-scale=1, maximum-scale=1">
 	</head>
-	<body class="home">
+	<body class="work">
 		<header>
 			<aside id="name">
 				<a href="/" class="larger">Aaron Linkous</a><span class="smaller">, <span class="title">Sr. Developer</span></span>
@@ -35,21 +35,7 @@
 
 		<div id="wrapper">
 			<section id="content">
-				<ul id="work_grid" class="row full_width">
-					<li id="flowers"><a href="flowers.html"><span></span><div>1800 Flowers</div></a><img src="#" /></li>
-					<li id="bellmobi"><a href="#"><span></span><div>Bellmobi</div></a><img src="#" /></li>
-					<li id="giftify"><a href="#"><span></span><div>Giftify</div></a><img src="#" /></li>
-					<li id="fnm"><a href="#"><span></span><div>Fannie May</div></a><img src="#" /></li>
-					<li id="famous"><a href="#"><span></span><div>Famous Footwear</div></a><img src="#" /></li>
-					<li id="bahamar"><a href="#"><span></span><div>Bahamar</div></a><img src="#" /></li>
-					<li id="delmar"><a href="#"><span></span><div>The Grand Del Mar</div></a><img src="#" /></li>
-					<li id="belterra"><a href="#"><span></span><div>Belterra Casino</div></a><img src="#" /></li>
-					<li id="bilt"><a href="#"><span></span><div>BILT</div></a><img src="#" /></li>
-					<li id="decklab"><a href="#"><span></span><div>decklab</div></a><img src="#" /></li>
-					<li id="lauberge"><a href="#"><span></span><div>L'auberge Casino</div></a><img src="#" /></li>
-					<li id="florists"><a href="#"><span></span><div>Florists</div></a><img src="#" /></li>
-					<li id="lumiere"><a href="#"><span></span><div>Lumiere Casino</div></a><img src="#" /></li>
-				</ul>
+
 			</section>
 
 			<footer>
