--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 			<nav>
 				<ul class="larger">
-					<li><a href="#">Work</a></li>
+					<li><a href="work.html">Work</a></li>
 					<li><a href="#">About</a></li>
 					<li><a href="#">Contact</a></li>
 					<li class="clear"></li>
@@ -36,7 +36,7 @@
 		<div id="wrapper">
 			<section id="content">
 				<ul id="work_grid" class="row full_width">
-					<li id="flowers"><a href="flowers.html"><span></span><div>1800 Flowers</div></a><img src="#" /></li>
+					<li id="flowers"><a href="work.html"><span></span><div>1800 Flowers</div></a><img src="#" /></li>
 					<li id="bellmobi"><a href="#"><span></span><div>Bellmobi</div></a><img src="#" /></li>
 					<li id="giftify"><a href="#"><span></span><div>Giftify</div></a><img src="#" /></li>
 					<li id="fnm"><a href="#"><span></span><div>Fannie May</div></a><img src="#" /></li>
