--- a/work.html
+++ b/work.html
@@ -16,7 +16,7 @@
 
 			<nav>
 				<ul class="larger">
-					<li><a href="#">Work</a></li>
+					<li><a href="work.html">Work</a></li>
 					<li><a href="#">About</a></li>
 					<li><a href="#">Contact</a></li>
 					<li class="clear"></li>
