modified some type sizes, added check for scroll pos on load, work template

--- a/work.html
+++ b/work.html
@@ -25,13 +25,12 @@
 		</header>
 
 
-		<section id="marquee" class="fixed">
-			<article class="centered">
-				<h1 class="title">Sr. Developer</h1>
-				<a href="/" class="fake_button" title="Github">Github</a>
-				<a href="/" class="fake_button" title="Resum&eacute;">Resum&eacute;</a>
-			</article>
-		</section>
+		<aside id="marquee" class="fixed">
+			<div class="centered">
+				<h1>1800 Flowers</h1>
+				<h2>Sr. Developer, Project Manager, UI & UX Designer</h2>
+			</div>
+		</aside>
 
 		<div id="wrapper">
 			<section id="content">
