--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
 		</header>
 
 
-		<section id="marquee" class="fixed">
-			<article class="centered">
+		<aside id="marquee" class="fixed">
+			<div class="centered">
 				<h1 class="title">Sr. Developer</h1>
 				<a href="/" class="fake_button" title="Github">Github</a>
 				<a href="/" class="fake_button" title="Resum&eacute;">Resum&eacute;</a>
-			</article>
-		</section>
+			</div>
+		</aside>
 
 		<div id="wrapper">
 			<section id="content">
