--- a/work.html
+++ b/work.html
@@ -16,9 +16,9 @@
 
 			<nav>
 				<ul class="larger">
-					<li><a href="work.html">Work</a></li>
-					<li><a href="#">About</a></li>
-					<li><a href="#">Contact</a></li>
+					<li><a href="work.html">Work</a><div></div></li>
+					<li><a href="#">About</a><div></div></li>
+					<li><a href="#">Contact</a><div></div></li>
 					<li class="clear"></li>
 				</ul>
 			</nav>
