swapped out background image on work. Swapped out vertically centered code in marquee for flexbox equiv. Added break point layout changes for work.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			<section id="content">
 				<div id="intro">
 					<h2>Experience</h2>
-					<p>Currently the Sr. Developer, UI & UX Designer, and Project Manager at <a href="http://www.bellmobi.com">Bellmobi</a>. I don't make websites, I help get you results from your new fancy digital platform. I've worked with a hand full of big name brands and pitched to more than a few CEOs. Although I would say I've got the chops for multiple titles, I don't consider myself a jack of all trades. Give me a job where I wireframe or prototype code that makes me think and I'll be the happiest little boy you've ever done seen.</p>
+					<p>Currently the Sr. Developer, UI & UX Designer, and Project Manager at <a href="http://www.bellmobi.com">Bellmobi</a>. I don't make websites, I help get you results from your new fancy digital platform. I've worked with a hand full of big name brands and pitched to more than a few CEOs. Although I would say I've got the chops for multiple titles, I don't consider myself a jack of all trades. Give me a job where I get to wireframe and code prototypes that make my head hurt and I'll be the happiest little boy you've ever done seen.</p>
 				</div>
 
 				<ul id="work_grid" class="row full_width">
