--- a/work.html
+++ b/work.html
@@ -24,7 +24,7 @@
 		</header>
 
 		<aside id="marquee" class="fixed">
-			<div class="centered">
+			<div class="centered left">
 				<h1>1800 Flowers</h1>
 				<h2>Sr. Developer, Project Manager, UI & UX Designer</h2>
 			</div>
@@ -32,7 +32,12 @@
 
 		<div id="wrapper">
 			<section id="content">
-				
+				<div id="intro">
+					<h1>1800 Flowers</h1>
+					<h2>Sr. Developer, Project Manager, UI & UX Designer</h2>
+
+					<p>As true pioneers in the one-web approach to e-commerce, <a href="http://www.1800flowers.com">1-800 Flowers</a> continues to push the envelope with tech-forward marketing, social media integration, new methods of payments, and thoughtful integration of select desktop features into mobile. In 2013, they asked us to build a new version of their flagship mobile website on the IBM WebSphere platform. This is the first step in their transition to a multi-branded site with a unified checkout. We are continuing to develop solutions for their future mobile success. </p>
+				</div>
 			</section>
 
 			<footer>
