mostly variable changes

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 
 		<aside id="marquee" class="fixed">
-			<div class="centered">
+			<div class="sign">
 				<h1 class="title">Sr. Developer</h1>
 				<a href="/" class="fake_button" title="Github">Github</a>
 				<a href="/" class="fake_button" title="Resum&eacute;">Resum&eacute;</a>
@@ -35,7 +35,6 @@
 		<div id="wrapper">
 			<section id="content">
 				<div id="intro">
-					<h2>Experience</h2>
 					<p>Currently the Sr. Developer, UI & UX Designer, and Project Manager at <a href="http://www.bellmobi.com">Bellmobi</a>. I don't make websites, I help get you results from your new fancy digital platform. I've worked with a hand full of big name brands and pitched to more than a few CEOs. Although I would say I've got the chops for multiple titles, I don't consider myself a jack of all trades. Give me a job where I get to wireframe and code prototypes that make my head hurt and I'll be the happiest little boy you've ever done seen.</p>
 				</div>
 
