--- a/work.html
+++ b/work.html
@@ -24,7 +24,7 @@
 		</header>
 
 		<aside id="marquee" class="fixed">
-			<div class="centered left">
+			<div class="sign left">
 				<h1>1800 Flowers</h1>
 				<h2>Sr. Developer, Project Manager, UI & UX Designer</h2>
 			</div>
